# inventario_hogar

./: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  pyproject.toml  railway.json  requirements.txt  tailwind.config.js
.claude/: settings.local.json
auth/: basic.py
components/features/: HistoryList.jinja  HistoryRecord.jinja  HistoryView.jinja  InventoryView.jinja  ItemRow.jinja  ItemsList.jinja  ProcessView.jinja  SectionFilters.jinja
components/layout/: Tabs.jinja
components/ui/: BackgroundLoader.jinja  EmptyState.jinja  Feedback.jinja  HistorySkeleton.jinja  InfiniteScroll.jinja  ItemSkeleton.jinja  LoadingSpinner.jinja
config/: manifest.py  settings.py
config/database/: db.py  models.py  queries.py  seed.sql
database/: db.py  models.py
docs/: jinjax_migration_plan.md  jinjax_reference.md  plan.md  plan_optimizacion.md  todo.md
routes/: inventory.py  process.py
static/: sw.js
static/css/: input.css  output.css
static/icons/: README.md
static/js/: lazy-loading.js
templates/: base.html  index.html
templates/components/: feedback.html  history_list.html  history_view.html  inventory_view.html  item_history.html  item_row.html  item_skeleton.html  items_list.html  loading.html  loading_spinner.html  process_view.html  section_filters.html  tabs.html
utils/: llm.py  parsers.py  serializers.py  time.py
