[project]
name = "inventario-alimentos"
version = "0.1.0"
description = "PWA para gestionar inventario de alimentos con voz"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.125.0",
    "uvicorn[standard]==0.38.0",
    "sqlmodel==0.0.27",
    "python-multipart==0.0.21",
    "bcrypt==5.0.0",
    "jinja2==3.1.6",
    "python-dotenv==1.2.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "pytailwindcss==0.3.0",
    "requests==2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
